# follia

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO
data/fonts/: bitocra-39.bdf  origami-mommy.fnt
examples/: 3d.c  CMakeLists.txt  gui.c  primitives.c  snake.c  space-invaders.c
examples/3d/: 3d.c  3dmath.h  Makefile
examples/gui/: checkbox.c  checkbox.h  selector.c  selector.h  slider.c  slider.h
examples/mouse/: Makefile  mouse.c
examples/primitives/: Makefile  checkbox.c  checkbox.h  primitives.c  selector.c  selector.h  slider.c  slider.h
examples/scalable/: Makefile  scalable.c
examples/snake/: Makefile  snake.c
examples/space-invaders/: Makefile  space-invaders.c
examples/text/: Makefile  text.c
include/: follia.h  x11framework.h
include/core/: fl_event.h  fl_key.h  fl_log.h  fl_mouse.h  fl_primitives.h  fl_system.h  fl_timer.h  fl_utils.h  xf_event.h  xf_key.h  xf_log.h  xf_primitives.h  xf_system.h  xf_timer.h  xf_utils.h
include/video/: fl_font.h  fl_texture.h  xf_texture.h
src/: x11framework.h
src/core/: fl_log.c  fl_primitives.c  fl_system.c  fl_timer.c  fl_utils.c  frame_buffer.h  xf_event.h  xf_font.c  xf_key.h  xf_log.c  xf_log.h  xf_mouse.h  xf_primitives.c  xf_sprite.c  xf_sprite.h  xf_system.c  xf_system.h  xf_texture.c  xf_texture.h  xf_timer.c  xf_utils.c  xf_utils.h
src/tests/: main.c  test_scalable.c  test_scalable.h  test_snake.c  test_snake.h
src/video/: fl_font.c  fl_texture.c  xf_font.c  (+3 more)
tests/: CMakeLists.txt  Makefile  fps_test.c  main.c  mouse.c  test_mouse.c  test_mouse.h  text.c  texture.c  timer.c
